--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   "license": "ISC",
   "devDependencies": {
     "@octokit/rest": "^18.7.1",
-    "@octokit/webhooks": "^9.11.0",
     "@types/express": "^4.17.13",
+    "express-github-webhook": "^1.0.6",
     "ts-node-dev": "^1.1.8",
     "tslint": "^5.20.1",
     "typescript": "^3.9.10"
